# Services_Market

./: alembic.ini  main.py  pyproject.toml  run_me.py  sql.py
alembic/: env.py
alembic/versions/: 2024_10_21_1223-c68821865c2c_add_users_table.py  2024_10_22_1702-0706f8514b47_add_vpn_table.py  2024_10_22_1809-046ba1600334_change_table_name_vpn_user_vpn.py  2024_10_22_1900-be86000cbb9a_add_vpn_price_association_vpn_price_.py  2024_10_23_1524-e2e2b1b01725_user_table_add_id_field_and_dele_tg_.py  2024_10_23_1525-67d498d8d279_add_tg_user_id_in_user_vpn_table.py  2024_10_23_1535-082f15ffc53b_del_tg_user_id_in_userv_vpn_table.py  2024_10_23_1536-d8579c66a347_delete_table_user.py  2024_10_23_1537-81571a469698_add_table_user.py  2024_10_23_1832-c5627ae5c7d7_create_unique_constraint_to_users.py  2024_10_23_1837-38d167205a9c_add_referral_table_and_fk_to_users.py  2024_10_24_1259-2a78e522f406_add_balance_in_users_table.py  2024_10_24_1745-d645eb10f9e1_in_price_table_add_enum_term_field_str_.py  2024_10_26_1310-9c7063ccb0ed_add_key_price_key_country_field_in_user_.py  2024_10_26_1541-acbf70904c9d_set_nullable_true_key_price_field_in_.py  2024_10_26_1630-229715facc1c_create_user_vpn_users_referral_tables.py  (+8 more)
buttons/: account.py  buy_vpn.py  pagination.py  start.py
core/: db_connections.py  settings.py
crud/: order.py  referral.py  user.py  vpn.py
handlers/: account.py  buy_vpn.py  referral.py  start.py
models/: __init__.py  base.py  order.py  referral.py  user.py  vpn.py
schematics/: order.py  vpn.py
utils/: countries.py  price_list.py
