[tool.poetry]
name = "vpn-market"
version = "0.1.0"
description = ""
authors = ["zifrit <zifrit@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiogram = "^3.13.1"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.0"
aiohttp = "^3.10.10"
uvicorn = "^0.32.0"
sqladmin = "^0.20.0"
fastapi = "^0.115.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
